internal/xds/translator/testdata/out/xds-ir/http3-mutual-tls.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      responseHeadersToAdd:
      - append: true
        header:
          key: alt-svc
          value: h3=":443"; ma=86400
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
